--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ckeditor-code-snippet-plugin",
   "version": "0.0.13",
   "description": "A simple CKEditor5 plugin that helps create preformatted text in the rich text editor.",
-  "main": "./dist/index.js",
+  "main": "./dist/index.html",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "babel src -d dist",
+    "build": "webpack --config webpack.config.js",
     "lint": "eslint --fix ./src",
     "prepare": "npm run clean && mkdir dist && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,8 +26,9 @@
   "license": "ISC",
   "dependencies": {
     "@ckeditor/ckeditor5-basic-styles": "^15.0.0",
-    "@ckeditor/ckeditor5-build-balloon": "^15.0.0",
+    "@ckeditor/ckeditor5-core": "^15.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^12.0.5",
+    "@ckeditor/ckeditor5-editor-balloon": "^15.0.0",
     "@ckeditor/ckeditor5-essentials": "^15.0.0",
     "@ckeditor/ckeditor5-heading": "^15.0.0",
     "@ckeditor/ckeditor5-list": "^15.0.0",
@@ -40,9 +41,6 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
