--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ckeditor-code-snippet-plugin",
-  "version": "0.0.13",
+  "version": "0.0.1",
   "description": "A simple CKEditor5 plugin that helps create preformatted text in the rich text editor.",
-  "main": "./dist/index.html",
+  "main": "./dist/bundle.js",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "webpack --config webpack.config.js",
@@ -13,7 +13,8 @@
   "files": [
     "dist",
     "src",
-    "README.md"
+    "README.md",
+    "package.json"
   ],
   "keywords": [
     "ckeditor",
@@ -35,14 +36,14 @@
     "@ckeditor/ckeditor5-paragraph": "^15.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^15.0.0",
     "@ckeditor/ckeditor5-ui": "^15.0.0",
-    "@ckeditor/ckeditor5-widget": "^15.0.0",
+    "@ckeditor/ckeditor5-widget": "^15.0.0"
+  },
+  "devDependencies": {
     "postcss-loader": "^3.0.0",
     "raw-loader": "^3.1.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
-  },
-  "devDependencies": {
+    "webpack-cli": "^3.3.10",
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
